# badcurl

./: Cargo.toml  README.md  output.txt
badcurl-sys/: Cargo.toml  build.rs  lib.rs
examples/: aws_sigv4.rs  doh.rs  https.rs  multi-dl.rs  ssl_cert_blob.rs  ssl_client_auth.rs  ssl_proxy.rs
src/: error.rs  lib.rs  multi.rs  version.rs
src/easy/: form.rs  handle.rs  handler.rs  list.rs  mod.rs
tests/: atexit.rs  easy.rs  impersonate.rs  multi.rs  post.rs  protocols.rs
